# perky

./: .gitignore  Cargo.toml  Makefile  README.md  default.kt.json  default.lt.json  meta.mk
docs/: Makefile
docs/src/: README.md  perky.md
docs/tools/pandoc-tools/: LICENSE.txt  Makefile  README.md
docs/tools/pandoc-tools/filters/: filter-toc.lua
examples/docs/: example-introduction.kt.json  example-permuting.kt.json  example.lt.json
examples/key-tables/: colemak.kt.json  dvorak.kt.json
resources/charfreq-dfko/: 1-grams-uc.tsv  1-grams.tsv
resources/charfreq-google/: 1-grams-uc.tsv  2-grams-uc.tsv  3-grams-uc.tsv
resources/charfreq-linux/: 1-grams-uc.tsv  1-grams.tsv  2-grams-uc.tsv  2-grams.tsv  3-grams-uc.tsv
resources/charfreq-shakespeare/: 1-grams-uc.tsv  1-grams.tsv  2-grams-uc.tsv  2-grams.tsv  3-grams-uc.tsv  3-grams.tsv
src/: dsv.rs  expressions.rs  fingerings.rs  goals.rs  json.rs  keys.rs  layouts.rs  lib.rs  main.rs  measurements.rs  metadata.rs  metrics.rs  ngrams.rs  permutations.rs  records.rs  scores.rs  tables.rs  ui.rs  util.rs  weights.rs  writers.rs
src/ui/: colors.rs  progress.rs  styles.rs
src/util/: format.rs  math.rs  signals.rs  strings.rs  threads.rs  time.rs
tools/: toml-to-json.py
