[dependencies]
atty = "0.2.14"
clap = { features = ["derive"], version = "4.5.45" }
csv = "1.3.1"
rayon = "1.10.0"
serde = "1.0.219"
serde_json = { features = ["preserve_order"], version = "1.0.140" }
strum = "0.27.1"
strum_macros = "0.27.1"
termcolor = "1.4.1"

[package]
description = "An application to permute and score keyboard layouts."
edition = "2024"
include = [
  "/Cargo.lock",
  "/Cargo.toml",
  "/LICENSE.txt",
  "/README.md",
  "/docs/build/**",
  "/examples/**",
  "/resources/**",
  "/src/**",
]
keywords = ["keyboards"]
license = "MIT"
name = "perky"
repository = "https://github.com/csmclaren/perky"
rust-version = "1.89.0"
version = "0.1.7"
